Helping Hand for Organisation or User

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8088
 #database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/HelpingHands
 spring.datasource.username=postgres
-spring.datasource.password=9876@Tgb
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
